--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "src",
-  "version": "0.0.0",
+  "name": "saiba-seu-ip-e-agent",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www.js",
